--- a/AnálisisDigitalDeImágenes/Session01.CPP/Makefile
+++ b/AnálisisDigitalDeImágenes/Session01.CPP/Makefile
@@ -4,9 +4,7 @@ OCV_I2PATH=$(OCV_I1PATH)/opencv2
 OCV_lPATH=/opencv/build/install/x64/mingw/bin
 CXXFLAGS=-I$(OCV_I1PATH) -I$(OCV_I2PATH)
 CXXLINKS=$(wildcard $(OCV_lPATH)/*.dll)
+CXXFILES=$(wildcard ./*.cxx)
 
-HolaMundo:
-	$(CXX) HolaMundo.cpp $(CXXLINKS) $(CXXFLAGS) -o hm
-
-MatBasics:
-	$(CXX) MatBasics.cpp $(CXXLINKS) $(CXXFLAGS) -o mb
+build:
+	$(CXX) OCV_Course.cpp $(CXXFILES) $(CXXLINKS) $(CXXFLAGS) -o OCVCourse
