--- a/AnálisisDigitalDeImágenes/Session01.CPP/Makefile
+++ b/AnálisisDigitalDeImágenes/Session01.CPP/Makefile
@@ -4,7 +4,14 @@ OCV_I2PATH=$(OCV_I1PATH)/opencv2
 OCV_lPATH=/opencv/build/install/x64/mingw/bin
 CXXFLAGS=-I$(OCV_I1PATH) -I$(OCV_I2PATH)
 CXXLINKS=$(wildcard $(OCV_lPATH)/*.dll)
-CXXFILES=$(wildcard ./*.cxx)
+SRCDIR=src
+BUILDDIR=build
+BINDIR=$(BUILDDIR)/bin
+CXXFILES=$(wildcard $(SRCDIR)/*.cxx)
 
-build:
-	$(CXX) OCV_Course.cpp $(CXXFILES) $(CXXLINKS) $(CXXFLAGS) -o OCVCourse
+analisis:
+#	cd $(BUILDDIR); \
+#		$(CXX) $(SRCDIR)/OCV_Course-main.cpp $(CXXFILES) $(CXXFLAGS) -c
+#		$(CXX) ../$(SRCDIR)/OCV_Course-main.cpp $(subst $(SRCDIR),../$(SRCDIR),$(CXXFILES)) $(CXXFLAGS) -c
+#	$(CXX) $(wildcard $(BULDDIR)/*.o)  $(CXXLINKS) $(CXXFLAGS) -o $(BINDIR)/OCVCourse
+	$(CXX) $(SRCDIR)/OCV_Course-main.cpp $(CXXFILES)  $(CXXLINKS) $(CXXFLAGS) -o $(BINDIR)/OCVCourse
